--- a/IntersysExercise/IntersysExercise/IntersysExercise.csproj
+++ b/IntersysExercise/IntersysExercise/IntersysExercise.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Home\Part1.cshtml" />
     <Content Include="Views\Home\Part2.cshtml" />
     <Content Include="Views\Home\Part3.cshtml" />
+    <Content Include="Views\Home\Part4.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
